--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 :root {
+  /* COLORS */
+  --display-background-color: hsl(202, 11%, 29%);
+  --display-text-color: hsl(255, 100%, 100%);
+
+  /* FONTS */
   --fuentePrincipal: "Roboto", sans-serif;
 }
 
@@ -18,15 +23,32 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 32rem;
   min-height: 100vh;
-}
-h1 {
 }
 
 #app {
   max-width: 128rem;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+}
+
+.calculator {
+  max-inline-size: 32rem;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15),
+    0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+}
+
+.calculator__display {
+  border: none;
+  width: 100%;
+  font-size: 2.4rem;
+  text-align: end;
+  background-color: var(--display-background-color);
+  color: var(--display-text-color);
+  padding: 1.5rem;
+}
+
+.calculator__display:focus {
+  outline: none;
 }
