--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   --display-background-color: hsl(202, 11%, 29%);
   --display-text-color: hsl(255, 100%, 100%);
 
+  --keys-background-color: hsl(208, 24%, 74%);
+  --key-operator-color: hsl(208, 25%, 86%);
+  --key-enter-color: hsl(357, 100%, 72%);
+
   /* FONTS */
   --fuentePrincipal: "Roboto", sans-serif;
 }
@@ -18,6 +22,7 @@ html {
 }
 
 body {
+  background-color: #d9d9d9;
   font-family: var(--fuentePrincipal);
   font-size: 1.6rem;
   margin: 0;
@@ -32,13 +37,12 @@ body {
 }
 
 .calculator {
-  max-inline-size: 32rem;
+  max-inline-size: 22rem;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15),
     0px 2px 4px 0px rgba(0, 0, 0, 0.12);
 }
-
 .calculator__display {
   border: none;
   width: 100%;
@@ -51,4 +55,27 @@ body {
 
 .calculator__display:focus {
   outline: none;
+}
+.calculator__keys {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.1rem;
+  background: var(--keys-background-color);
+}
+.calculator__key {
+  border: none;
+  padding: 1.5rem 1.25rem;
+  font-size: 1.5rem;
+}
+.calculator__key:active {
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
+  outline: none;
+}
+.calculator__key--operator {
+  background-color: var(--key-operator-color);
+}
+.calculator__key--enter {
+  grid-column: 4 / 5; /* Start at column #4 and end at column #5 (the very right edge). */
+  grid-row: 2 / span 4; /* Start at row #2 and span 4 rows */
+  background-color: var(--key-enter-color);
 }
